--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -281,6 +281,8 @@ ul li a:hover{
 .portfolio-btn{
   background-color: white;
   padding: 5px 20px;
+  margin-right: 15px;
+  margin-left: 15px;
   margin-bottom: 50px;
   border-radius: 15px;
   border-right: 5px solid #11ffff;
@@ -405,5 +407,50 @@ ul li a:hover{
   font-weight: 400;
   letter-spacing: 1px;
   font-size: 40px
+}
+
+/* VFX PAGE */
+
+.container-portfolio{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.portfolio-menu{
+  margin-top: 40px;
+  display: flex;
+  justify-content: center;
+}
+
+.portfolio-content{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center;
+}
+
+.portfolio-content video{
+  width: 600px;
+}
+
+#small-video{
+  width: 400px;
+}
+
+.portfolio-btn-p{
+  background-color: #3333;
+  padding: 5px 20px;
+  margin-bottom: 50px;
+  border-radius: 15px;
+  border-right: 5px solid #ff0000;
+  border-left: 5px solid #00ff06;
+}
+
+.portfolio-btn-p a{
+  text-decoration: none;
+  font-family: 'vcr_osd_monoregular';
+  font-size: 16px;
+  color: #fff;
 }
 
